# opendap-nsidc

./: Makefile.am  Makefile.in  NSIDCArray.cc  NSIDCArray.h  NSIDCDAS.cc  NSIDCDAS.h  NSIDCDDS.cc  NSIDCDDS.h  NSIDCGridCoordinates.h  NSIDCGridCoordinatesLat.cc  NSIDCGridCoordinatesLat2.cc  NSIDCGridCoordinatesLatS.cc  NSIDCGridCoordinatesLon.cc  NSIDCGridCoordinatesLon2.cc  NSIDCGridCoordinatesLonS.cc  NSIDCModule.cc  NSIDCModule.h  NSIDCRequestHandler.cc  NSIDCRequestHandler.h  NSIDCResponseNames.h  NSIDCUtils.cc  NSIDCUtils.h  NSIDCVariable.cc  NSIDCVariable.h  README  bes-binary_ssmi_nsidc-data.sh.in  config.status  configure  configure.ac
